# Exam-Project-Analytics-to-Action

./: .gitignore  PredIMDB.ipynb  README.md  appeal.py  data_prep.py  efa_winners_2000_2024.xlsx  exploratory.py  pyproject.toml  requirements.txt
plots/: evaluation_results.txt
